--- a/approachDiagH/playground.ipynb
+++ b/approachDiagH/playground.ipynb
@@ -49,7 +49,7 @@
        " * Status: success\n",
        "\n",
        " * Candidate solution\n",
-       "    Final objective value:     -1.301921e-22\n",
+       "    Final objective value:     -2.499801e-06\n",
        "\n",
        " * Found with\n",
        "    Algorithm:     Nelder-Mead\n",
@@ -58,9 +58,9 @@
        "    √(Σ(yᵢ-ȳ)²)/n ≤ 1.0e-08\n",
        "\n",
        " * Work counters\n",
-       "    Seconds run:   0  (vs limit Inf)\n",
-       "    Iterations:    92\n",
-       "    f(x) calls:    160\n"
+       "    Seconds run:   2  (vs limit Inf)\n",
+       "    Iterations:    203\n",
+       "    f(x) calls:    342\n"
       ]
      },
      "metadata": {},
@@ -79,23 +79,80 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Visuelle"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "η̂ = Optim.minimizer(res)[1:m+1];\n",
-    "L̂ = buildLowerTriangular(Optim.minimizer(res)[m+2:end], m);\n",
-    "Σ̂ = L̂*L̂'\n",
+    "Σ̂ = diagm([Optim.minimizer(res)[m+2].^2, fill(Optim.minimizer(res)[m+3]^2, m)...]);\n",
     "\n",
     "d̂ = MvNormal(η̂, Σ̂);"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10-element Vector{Float64}:\n",
+       "  5.354339321724305\n",
+       " 10.01897171172988\n",
+       "  9.999973649556793\n",
+       "  9.995460624615742\n",
+       " 10.036100395659457\n",
+       " 10.000192067916306\n",
+       "  9.988426647859626\n",
+       "  9.984489264343727\n",
+       "  9.976139069715236\n",
+       "  9.97637247669571"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "### Visuelle"
+    "η̂"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10×10 Matrix{Float64}:\n",
+       " 0.471072  0.0        0.0        …  0.0        0.0        0.0\n",
+       " 0.0       0.0025835  0.0           0.0        0.0        0.0\n",
+       " 0.0       0.0        0.0025835     0.0        0.0        0.0\n",
+       " 0.0       0.0        0.0           0.0        0.0        0.0\n",
+       " 0.0       0.0        0.0           0.0        0.0        0.0\n",
+       " 0.0       0.0        0.0        …  0.0        0.0        0.0\n",
+       " 0.0       0.0        0.0           0.0        0.0        0.0\n",
+       " 0.0       0.0        0.0           0.0025835  0.0        0.0\n",
+       " 0.0       0.0        0.0           0.0        0.0025835  0.0\n",
+       " 0.0       0.0        0.0           0.0        0.0        0.0025835"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "Σ̂"
    ]
   },
   {
@@ -107,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,12 +190,12 @@
     "    Guide.title(\"Pour kappa_u\")\n",
     ")\n",
     "\n",
-    "draw(PNG(\"../plots/sqrt/log_kappa.png\"), p)"
+    "draw(PNG(\"../plots/diagH/log_kappa.png\"), p)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +221,7 @@
     "    Guide.title(\"Pour mu\")\n",
     ")\n",
     "\n",
-    "draw(PNG(\"../plots/sqrt/log_mu.png\"), p)"
+    "draw(PNG(\"../plots/diagH/log_mu.png\"), p)"
    ]
   },
   {
@@ -176,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,14 +252,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Pour κᵤ\n",
     "\n",
     "approxDensity(x::Real) = 1/x * pdf(Normal(η̂[1], Σ̂[1, 1]), log(x))\n",
-    "x = 0:1:1000\n",
+    "x = 0:0.1:1000\n",
     "\n",
     "p = plot(\n",
     "    layer(x=θsampling.value[:, 1, 1], Geom.histogram(density=true)),\n",
@@ -212,29 +269,29 @@
     "    Guide.title(\"Approx vs MCMC pour kappa_u\")\n",
     ")\n",
     "\n",
-    "draw(PNG(\"../plots/sqrt/approxvsmcmc_kappa.png\"), p)"
+    "draw(PNG(\"../plots/diagH/approxvsmcmc_kappa.png\"), p)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Pour μ\n",
     "\n",
-    "approxDensity(x::Real) = pdf(Normal(η̂[3], Σ̂[3, 3]), x)\n",
-    "x = 9:.001:11\n",
+    "approxDensity(x::Real) = pdf(Normal(η̂[2], Σ̂[2, 2]), x)\n",
+    "x = 9.5:.001:10.5\n",
     "\n",
     "p = plot(\n",
-    "    layer(x=x, y=approxDensity.(x), Geom.line, Theme(default_color=\"red\")),\n",
     "    layer(x=θsampling.value[:, 2, 1], Geom.histogram(density=true)),\n",
+    "    layer(x=x, y=approxDensity.(x), Geom.line, Theme(default_color=\"red\")),\n",
     "    Guide.manual_color_key(\"Legend\", [\"Approximation\", \"Posteriori\"], [\"red\", \"deepskyblue\"]),\n",
     "    Theme(background_color=\"white\"),\n",
     "    Guide.title(\"Approx vs MCMC pour mu\")\n",
     ")\n",
     "\n",
-    "draw(PNG(\"../plots/sqrt/approxvsmcmc_mu.png\"), p)"
+    "draw(PNG(\"../plots/diagH/approxvsmcmc_mu.png\"), p)"
    ]
   },
   {
